--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
     "build": "run-p build:*",
-    "format:client": "cd client && npm run format",
-    "format:server": "cd server && npm run format",
-    "format": "run-p format:*",
+    "format": "biome format --write --skip-parse-errors",
+    "check": "biome check --write ./client",
     "start": "node ./server/dist/main"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.3",
     "npm-run-all": "^4.1.5"
   }
 }
