--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "@tanstack/react-query-devtools": "^5.87.3",
     "@tanstack/react-router": "^1.131.36",
     "@tanstack/react-router-devtools": "^1.131.36",
+    "cva": "^1.0.0-beta.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
