--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "format": "biome format --write",
     "check": "biome check --write",
     "openapi-ts": "openapi-ts",
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
