--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "@hey-api/openapi-ts": "^0.82.5",
     "@tanstack/router-plugin": "^1.131.36",
     "@types/react": "^19.1.10",
