--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dev": "nest start --watch --preserveWatchOutput",
     "debug": "nest start --debug --watch",
     "start": "node dist/main",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -49,6 +50,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "prettier": "^3.6.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
