--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "cva": "^1.0.0-beta.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.5",
