--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-router": "^1.131.36",
     "@tanstack/react-router-devtools": "^1.131.36",
     "cva": "^1.0.0-beta.4",
+    "js-sha512": "^0.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
