--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "openapi-ts": "openapi-ts",
     "dev": "vite --host",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typesafe-i18n": "typesafe-i18n"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
@@ -26,6 +27,7 @@
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "typesafe-i18n": "^5.26.2",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
