--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,7 @@
     "openapi-ts": "openapi-ts",
     "dev": "vite --host",
     "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "typesafe-i18n": "typesafe-i18n"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
@@ -20,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.87.3",
     "@tanstack/react-router": "^1.131.36",
     "@tanstack/react-router-devtools": "^1.131.36",
+    "change-case": "^5.4.4",
     "cva": "^1.0.0-beta.4",
     "js-sha512": "^0.9.0",
     "react": "^19.1.1",
@@ -27,7 +27,6 @@
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "typesafe-i18n": "^5.26.2",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
