--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,6 +19,8 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true
   }
