Added simple authentication... (and simple JWT)

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,7 @@ DB_HOST="localhost"
 DB_NAME="booky"
 DB_SYNC=true
 DB_AUTOLOAD=true
+JWT_SECRET=46144fb0baac4613b4a51675d102f146 
+JWT_TOKEN_AUDIENCE=localhost:3000
+JWT_TOKEN_ISSUER=localhost:3000
+JWT_ACCESS_TOKEN_TTL=3600
