--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,4 @@ JWT_SECRET=46144fb0baac4613b4a51675d102f146
 JWT_TOKEN_AUDIENCE=localhost:3000
 JWT_TOKEN_ISSUER=localhost:3000
 JWT_ACCESS_TOKEN_TTL=3600
+JWT_REFRESH_TOKEN_TTL=86400
